# someip_OTA_update

./: .gitignore  CMakeLists.txt  README.md  client.json  daemon.json  daemon_config.json  example_daemon_config.json  example_relay_config.json  relay.json  relay_config.json  run.sh  service.json
client_src/: main.cpp
daemon/: CMakeLists.txt
daemon/config/: daemon.json  example_daemon_config.json
daemon/src/: ota_daemon_main.cpp
daemon_src/: config_manager.cc  file_decompressor.cc  ota_daemon_main.cpp
gui/: CMakeLists.txt
gui/config/: service.json
gui/include/gui/: download_manager.hpp
gui/qml/: Main.qml
gui/src/: download_manager.cpp  main.cpp
gui_src/: download_manager.cpp  download_manager.hpp  main.cpp
inc/: command_types.hpp  config_manager.hpp  daemon_controller.hpp  download_client.hpp  file_decompressor.hpp  file_manager.hpp  ota_updater_impl.hpp  relay_control_impl.hpp  transfer_config.hpp  updater_impl.hpp
qml/: Main.qml
relay/: CMakeLists.txt
relay/config/: example_relay_config.json  relay.json
relay/include/relay/: daemon_controller.hpp  download_client.hpp  relay_control_impl.hpp
relay/src/: daemon_controller.cpp  download_client.cpp  ota_relay_main.cpp  relay_control_impl.cpp
relay_src/: daemon_controller.cc  download_client.cc  ota_relay_main.cpp  relay_control_impl.cc
service/: CMakeLists.txt
service/config/: service.json
service/include/service/: ota_updater_impl.hpp
service/src/: ota_service_main.cpp  ota_updater_impl.cpp
service_src/: file_manager.cc  ota_service_main.cpp  ota_updater_impl.cc  updater_impl.cc
shared/: CMakeLists.txt
shared/include/shared/: command_types.hpp  config_manager.hpp  file_decompressor.hpp  file_manager.hpp  transfer_config.hpp
shared/src/: config_manager.cpp  file_decompressor.cpp  file_manager.cpp
src/: main.cpp  update_manager.cc
